# gitpulse

./: .gitignore  LICENSE  README.md  pyproject.toml
gitpulse/: gui.py
gitpulse/ai/: commitmsg.py  providers.py  summarizer.py
gitpulse/cli/: _shared.py  commands_analyze.py  commands_dashboard.py  commands_remote.py  commands_service.py  commands_tools.py  main.py  render.py
gitpulse/core/: changelog.py  collector.py  config.py  dateparse.py  diffstage.py  gitgraph.py  models.py  procutil.py  remote.py  standup.py  stats.py  trends.py
gitpulse/notifiers/: dispatch.py
gitpulse/scheduler/: runner.py
gitpulse/service/: controller.py  units.py
gitpulse/web/: browse.py  schemas.py  serializers.py  server.py
gitpulse/web/routes/: analysis.py  commit.py  providers.py  repos.py
gitpulse/web/static/: index.html
gitpulse/web/static/css/: app.css
gitpulse/web/static/js/: actions.js  charts.js  commit.js  core.js  graph.js  init.js  providers.js  repo.js  summary.js
tests/: conftest.py  test_api.py  test_collector.py  test_commit.py  test_dateparse.py  test_gitgraph.py  test_providers_trends.py  test_service.py
