[project]
name = "gitpulse"
version = "0.1.0"
description = "AI-powered git activity digests — semantic summaries, multi-repo dashboards, scheduled reports."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygit2>=1.14",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.40"]
schedule = ["apscheduler>=3.10"]
desktop = ["plyer>=2.1"]
all = ["anthropic>=0.40", "apscheduler>=3.10", "plyer>=2.1"]

[project.scripts]
gitpulse = "gitpulse.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gitpulse*"]
